--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
   <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+  <script src="js/particles.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
