--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
 </head>
 
 <body>
-  <!-- particles.js container -->
-  <div id="particles-js"></div> <!-- stats - count particles -->
-  <div class="count-particles"> <span class="js-count-particles">--</span> particles </div>
-  <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
-  <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+  <div id="particles-js"></div>
   <script src="js/particles.min.js"></script>
   <script src="js/script.js"></script>
 </body>
